...
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_small"
            android:text="@{reminderDataItem.title}"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_large"
            android:textStyle="bold"
            tools:text="Title" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_small"
            android:text='@{reminderDataItem.description ?? "No description!"}'
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="@dimen/text_size_large"
            android:textStyle="italic"
            tools:text="Description" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_normal"
            android:text="@string/reminder_location"
...
