<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/reminderListFragment"
        android:title="@string/bottom_navigation_reminders_title"
        android:icon="@drawable/ic_baseline_format_list_bulleted_24"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/selectLocationFragment"
        android:title="@string/bottom_navigation_map_title"
        android:icon="@drawable/ic_baseline_map_24"
        app:showAsAction="ifRoom" />

</menu>